--- a/ex-2/style.css
+++ b/ex-2/style.css
@@ -1,1 +1,49 @@
-/* Start coding here */
+body{
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.t-lightgrey {
+    background-color: lightgrey;
+    padding: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.t-black {
+    background-color: black;
+    padding: 16px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.t-crimson{
+    background-color: crimson;
+    padding: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.t-khaki {
+    background-color: khaki;
+    width: 700px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+h1 {
+    font-size: 72px;
+    margin: 0;
+    color: black;
+    position: absolute;
+    top: 30px;
+}
